@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020110731"
+#define public MagickPackageVersionAddendum ".020110808"
 #define public MagickPackageReleaseDate "unreleased"
