@@ -1,3 +1,8 @@
+2011-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/enhance.c (LevelImageChannel): Fix documented prototype.
+	Problem was reported by Brad Harder.
+
 2011-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/pixel_cache.c (AcquireOneCacheViewPixelInlined): Only use
